--- a/ZONE-watcher/app/views/search_filters/index.html.erb
+++ b/ZONE-watcher/app/views/search_filters/index.html.erb
@@ -1,7 +1,7 @@
 <div class="row-fluid rowContentTag">
 	<div class="span12">
 		<% if @infos[:thumbnail] != nil%>
-			<%= image_tag @infos[:thumbnail], :class => "pull-left span5", :id => "imgtag"%>
+			<%= image_tag @infos[:thumbnail], :class => "pull-left span5", :id => "imgtag", :alt => ""%>
 		<%end		%>
 		
 		<span class="textContent">
