--- a/ZONE-watcher/app/views/items/_reminder_panel.html.erb
+++ b/ZONE-watcher/app/views/items/_reminder_panel.html.erb
@@ -1,8 +1,6 @@
 <%= form_for "formModal", :url => url_for( :controller =>'searches', :action => 'index'), method: :POST, html: { id: "formModal"} do |f| %>
 
-    <div class="row-fluid">
-	<div id="reminder" class="span5">
-		<div class="span11 reminderSources">
+		<div class="">
 			<div class="row-fluid">
 				<div class="span1"></div>
 				<div class="span10">
@@ -11,7 +9,7 @@
 					</div>
 					<div class="row-fluid">
                       <div id="wellSources" class="well summary span12">
-                        <% @search.sources.each do |source| %>
+                        <% search.sources.each do |source| %>
                           <%= raw source.getButton %>
                         <%end%>
                       </div>
@@ -19,7 +17,6 @@
 					</div>
 				</div>
 			</div>
-			<hr>
 			<div class="row-fluid">
 				<div class="span1"></div>
 				<div class="span10">
@@ -31,7 +28,7 @@
 					</div>
 					<div class="row-fluid">
 						<div id="summaryAnd" class="well summary span12 well-success" ondrop="drop(event)" ondragover="allowDrop(event)">
-                          <% @search.getAndFilters.each do |filter| %>
+                          <% search.getAndFilters.each do |filter| %>
                               <%= raw filter.getButton%>
                           <%end%>
 						</div>
@@ -41,7 +38,7 @@
 					</div>
 					<div class="row-fluid">
 						<div id="summaryOr" class="well summary span12 well-info" ondrop="drop(event)" ondragover="allowDrop(event)">
-                          <% @search.getOrFilters.each do |filter| %>
+                          <% search.getOrFilters.each do |filter| %>
                             <%= raw filter.getButton%>
                           <%end%>
 						</div>
@@ -51,7 +48,7 @@
 					</div>
 					<div class="row-fluid">
 						<div id="summaryWithout" class="well summary span12 well-danger" ondrop="drop(event)" ondragover="allowDrop(event)">
-                          <% @search.getWithoutFilters.each do |filter| %>
+                          <% search.getWithoutFilters.each do |filter| %>
                               <%= raw filter.getButton%>
                           <%end%>
 						</div>
@@ -64,7 +61,7 @@
 				<div class="span4">
 					<button class="btn btn-info span12" type="submit" onclick="
                     movingData();
-                    $('#formModal').attr('action','/searches/<%=@search.id%>/edit');
+                    $('#formModal').attr('action','/searches/<%=search.id%>/edit');
                     $('#formModal').attr('method','GET');
                     ">
 						<%= raw t 'items.reminder.change' %>
@@ -78,11 +75,4 @@
 				</div>
 			</div>
 		</div>
-		<div id="transparentDiv" class="span1"></div>
-		<div id="openReminder" class="span1" data-toggle="popover" data-placement="right" data-content="<%= raw t 'items.popover.content' %>" title="" data-original-title="<%= raw t 'items.popover.title' %>">
-			<i class="icon-chevron-right"></i>
-		</div>
-		<div id="movedData"></div>
-	</div>
-</div>
 <% end %>
