--- a/ZONE-watcher/app/views/searches/index.html.erb
+++ b/ZONE-watcher/app/views/searches/index.html.erb
@@ -1,4 +1,4 @@
-<h1><%= t("menu.yourFilters")%></h1>
+<h1><%= t("menu.yourSearches")%></h1>
 
 <table class="table table-hover  table-bordered">
   <thead>
