[#58666784] working version of the left pannel

--- a/ZONE-watcher/app/views/items/_reminder_panel.html.erb
+++ b/ZONE-watcher/app/views/items/_reminder_panel.html.erb
@@ -69,7 +69,7 @@
             </div>
             <div class="span2"></div>
             <div class="span4">
-                <button id="updateSearch" class="btn btn-success span12 updater" type="submit" onclick="movingData('<%=search.id%>')">
+                <button style="height:50px" id="updateSearch" class="btn btn-success span12 updater" type="submit" onclick="movingData('<%=search.id%>')">
                     <%= raw t 'items.reminder.update' %>
                 </button>
             </div>
