--- a/ZONE-watcher/app/assets/stylesheets/items.css.scss
+++ b/ZONE-watcher/app/assets/stylesheets/items.css.scss
@@ -167,7 +167,7 @@ a.label:visited{
 }
 
 #openReminder{
-  transition: left 0.5s ease-in;
+  /*transition: left 0.5s ease-in;
   position: relative;
   background-color: #f5f5f5;
   color: #0088cc;
@@ -180,7 +180,7 @@ a.label:visited{
   padding-right:3%;
   margin-left: -1px;
   font-size: 20px;
-  z-index: 50;
+  z-index: 50;*/
 }
 
 #transparentDiv{
