--- a/ZONE-watcher/app/views/items/_reminder_panel.html.erb
+++ b/ZONE-watcher/app/views/items/_reminder_panel.html.erb
@@ -1,4 +1,13 @@
 <%= form_for "formModal", :url => url_for( :controller =>'searches', :action => 'index'), method: :POST, html: { id: "formModal"} do |f| %>
+    <% if search.id != Rails.application.config.defaultRequestId.to_s
+            editButton = "<input name='searchName' class='editNameInputFrom' type='text' value='#{search.name}'/><span class='icon-pencil pointerMouse' onclick=\"$($(this).parent()).children('.editNameInputFrom').focus();showUpdate();\"/>"
+            descriptionSearchBoxTitle = "#{editButton}      #{link_to '', search, method: :delete, data: { confirm: 'Are you sure?' }, :class => "icon-trash pull-right"}"
+       else
+         descriptionSearchBoxTitle = search.name
+       end
+    %>
+
+<h3 class="popover-title"><%= raw descriptionSearchBoxTitle%></h3>
     <div id="movedData"></div>
     <div id="popover-<%= search.id%>">
         <div class="row-fluid">
