some displaybug fixing

--- a/ZONE-watcher/app/views/items/index.html.erb
+++ b/ZONE-watcher/app/views/items/index.html.erb
@@ -1,7 +1,7 @@
   <div class="row">
 
     <div class="span2 bs-docs-sidebar">
-      <%= render "searches/left_panel", :searches => @searches %>
+      <%= render "searches/left_menu", :searches => @searches %>
     </div>
 
     <script>
