--- a/ZONE-watcher/app/views/home/index.html.erb
+++ b/ZONE-watcher/app/views/home/index.html.erb
@@ -9,9 +9,7 @@
 
   <div class="row" xmlns="http://www.w3.org/1999/html" style="margin-top:66px; height:366px">
     <div class="span2"></div>
-    <div class="span8 ">
-            <iframe src="//player.vimeo.com/video/74277156" width="650" height="366" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-    </div>
+        <iframe class="flex-video widescreen container well well-small span8" src="//player.vimeo.com/video/74277156" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     <div class="span2"></div>
   </div>
 
