--- a/ZONE-watcher/app/views/layouts/_login.html.erb
+++ b/ZONE-watcher/app/views/layouts/_login.html.erb
@@ -1,9 +1,17 @@
 <% if user_signed_in? %>
-    <li class="<%= 'active' if current_page?(favorites_path) %>"><%= link_to raw("<i class=\"icon-star\" ></i>"), favorites_path, :title => t('menu.favoris') %></li>
-    <li><%= link_to t("menu.editAccount"), edit_user_registration_path %></li>
-  <li>
-    <%= link_to t("menu.logout"), destroy_user_session_path, :method=>'delete' %>
-  </li>
+
+
+
+    <li class="dropdown">
+      <a data-toggle="dropdown" class="dropdown-toggle" href="#"><b class=" icon-user"></b></a>
+      <ul class="dropdown-menu">
+        <li><%= link_to t("menu.editAccount"), edit_user_registration_path %></li>
+        <li><%= link_to t("menu.logout"), destroy_user_session_path, :method=>'delete' %></li>
+      </ul>
+    </li>
+
+
+
 <% else %>
   <li class="dropdown">
     <a class="dropdown-toggle" href="#" data-toggle="dropdown"><%= t("menu.signIn")%> <strong class="caret"></strong></a>
