fix redirect bug and clean sources page

--- a/ZONE-watcher/app/views/sources/_form.html.erb
+++ b/ZONE-watcher/app/views/sources/_form.html.erb
@@ -25,13 +25,13 @@
     </div>
   </div>
 
-
+<!--
     <div class="control-group">
       <label for="ajax-combo" class="control-label span2"><%=  t("source.list.lang") %></label>
       <div class="controls span9">
         <div id="ajax-container-lang"></div>
       </div>
-    </div>
+    </div>-->
 
     <div class="control-group">
       <label for="ajax-combo" class="control-label span2"><%=  t("source.list.theme") %></label>
